# embvisualcontrol

control/: PIDbasic.ino
control/PID_script/: PID_script.ino
control/PIDbasic/: PIDbasic.ino  motor.ino
dev/: main.cpp
dev/lane/: CMakeLists.txt  lanedetection.cpp  lanedetection.h  main.cpp
dev/src/: CMakeLists.txt  blue.cpp  stop.cpp  yellow.cpp
lanefinder/: CMakeLists.txt  LaneDetect.cpp  linefinder.h
sign_classifier/: CMakeLists.txt  LaneDetect.cpp  LaneDetect.h  Main.cpp  linefinder.h
src/: CMakeLists.txt  Color_based_segmentation.cpp  LaneDetect.cpp  common.h  drawObjectDetect.cpp  linefinder.h  main.cpp  stop.cpp
