#####################################
cmake_minimum_required (VERSION 2.8)
project (main)
set(raspicam_DIR "../../raspicam/build")
find_package(raspicam REQUIRED)
find_package(OpenCV)
set(CMAKE_CXX_FLAGS "-Wall -std=c++0x")
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING OPENCV TESTS")
add_executable (main LaneDetect.cpp)
target_link_libraries (main ${raspicam_CV_LIBS})
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
#####################################
